1.0-devel
=====================

 * Yet another migration optimization: Added catalogpatch to the migration
   system. The patch is altering portal_catalog.catalog_object and
   uncatalog_object. Read migration/catalogpatch.py for more informations.
   The catalog patch can be enabled by passing use_catalog_patch=True to
   the migration functions.
   [tiran]

 * Fixed last bit of http://plone.org/collector/3060  Don't let missing CMF
   types crash portal_atct.disableCMFTypes().
   [alecm]

 * Enhanced migration code:
    o CatalogWalkerWithLevel is now based on ExtendedPathIndex
      and behaves like CatalogWalker.
    o Added walker arguments for transaction size, full transactions.
      and savepoints. The migration system can use ZODB savepoints to
      roll back to a sane point.
    o Migrators are also registered by (src,dst) meta_type.
    o The new function migratePortalType() can be used to migrate a single
      content type by just passing the src and dst portal type to the
      function. Both portal types must be registerd in portal_types and a
      migration from src to dst meta_type must exist.
   [tiran]

 * Don't catalog all types in _catalogTypesByMetatype it the passed list is
   empty.
   [jenner, alecm]

 * Modified templates to use the new pretty_title_or_id feature from plone.
   [alecm]

 * Made atct_album_view use the catalog like other listings, and reuse the
   nice macro from folder_listing.
   [alecm]

 * Zope2.7 compatibility again:
    o replaced import transaction with from Products.CMFPlone import transaction
   [hannosch]

 * some minor i18n tweaks
   [hannosch]

 * Updated INSTALL.txt for CMF 1.5. Zope 2.8 and more
   [tiran]

 * CMF 1.5 / Zope2.8 compatibility:
    o replaced CMFCorePermissions with permissions
    o replaced get_transaction() with transaction
    o removed product argument from TooolInit()
    o logging.getLogger() and LOG.debug() etc.
   [tiran]

 * Greatly enhanced logging during migration.
   [tiran]
